# rock-paper-scissors

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP  ROADMAP.md
lib/raygui-3.2/include/: raygui.h
src/: fixed_loop.cpp  fixed_loop.hpp  main.cpp  rock_paper_scissors.cpp  rock_paper_scissors.hpp
